Sat Feb 21 20:20:11 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtksettings.c (gtk_settings_class_init): Use P_ instead of
	_ for the new Xft settings.

Sat Feb 21 20:09:53 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Bug 130790 (Federico Mena Quintero, Owen Taylor)
	
	* gdk/x11/gdkevents-x11.c: Add Xft XSETTINGS

	* gtk/gtksettings.c: Add new GtkSettings corresponding to the Xft
	XSETTINGS
	
Sat Feb 21 19:18:26 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	Bug 132502
	
	* gtk/gtkmenu.c (gtk_menu_motion_notify): Make sure we pop down
	if we enter a non-selectable menu item.

	* gtk/gtkmenu.c (gtk_menu_leave_notify): Don't pop a submenu
	when the user has left the item.

Sat Feb 21 17:57:35 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/docs: Commit auto-generated changes

Fri Feb 20 18:20:22 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c: conditional compile for GtkPathBar

	* gtk/gtkpathbar.c (gtk_path_bar_size_allocate): Clean up
	allocation code.  Works fully in RTL languages, I think.
	(gtk_path_bar_scroll_up): Scroll up.
	(gtk_path_bar_scroll_down): Scroll down.

2004-02-20  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-20  Michael Meeks  <michael@ximian.com>

	* gtk/gtktoolitem.c (gtk_tool_item_property_notify): impl.
	(gtk_tool_item_class_init): hook it up.
	(gtk_tool_item_set_proxy_menu_item): synchronize sensitivity.

	* gtk/gtktoolbutton.c (gtk_tool_button_property_notify):
	chain to parent, fix strcmp bug.

	* tests/testtoolbar.c (main): re-arrange widgets to allow
	more overflowing toolbar goodness.

2004-02-20  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkfilechooserdefault.c: (shortcuts_append_desktop):
	Desktop directory is not translated.
	(set_tree_model):
	There might not be volumes for all paths.
	* gtk/gtkfilechooserwidget.c:
	(gtk_file_chooser_widget_constructor):
	Use gtk_file_chooser_set_current_folder to set cwd.
